fixed align items

--- a/assets/sass/components/_popup.scss
+++ b/assets/sass/components/_popup.scss
@@ -242,8 +242,9 @@
     .order-items {
         height: auto;
         display: flex; 
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
+        align-items: stretch; 
     }
     .item {
         height: auto;
@@ -253,6 +254,7 @@
         flex-wrap: wrap;
         align-items: stretch;
         }
+        
 
     .checkbox-container {
         flex-direction: row-reverse;
@@ -279,9 +281,18 @@
     .item-content {
         display: flex;
         flex-wrap: wrap;
-        flex-direction: column;
+        flex-direction: row-reverse;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+    .item-header {
+        flex-direction: column
+    }
+    .checkbox-container{
+        align-self: flex-start;
     }
 }
+
 
 
 @media (max-width: 1000px) {
